--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
+  padding: 30px 40px;
   text-align: center;
+  background-color: white;
+  width: 50vmin;
+font-size: 10px;
+font-family: Arial, Helvetica, sans-serif;
 }
 
 .App-logo {
@@ -8,15 +13,30 @@
   pointer-events: none;
 }
 
+.btn-flat {
+  background-color: purple;
+  color: white;
+}
+
+.btn-xxl {
+  padding: 1rem 1.5rem;
+  font-size: 1.5rem;
+}
+
 .App-header {
-  background-color: #282c34;
+    background-color: #205bd1;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(1px + 2vmin);
+  color: rgb(14, 15, 14);
+  text-align: left;
+
+}
+.clock{
+  font-size: 100px
 }
 
 .App-link {
